:recycle: refactor: reorganized router group
